<resources>
    <string name="abc_action_bar_home_description">转到主屏幕</string>
    <string name="abc_action_bar_home_description_format">%1$s：%2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s - %2$s：%3$s</string>
    <string name="abc_action_bar_up_description">转到上一层级</string>
    <string name="abc_action_menu_overflow_description">更多选项</string>
    <string name="abc_action_mode_done">完成</string>
    <string name="abc_activity_chooser_view_see_all">查看全部</string>
    <string name="abc_activitychooserview_choose_application">选择应用</string>
    <string name="abc_capital_off">关闭</string>
    <string name="abc_capital_on">开启</string>
    <string name="abc_search_hint">搜索…</string>
    <string name="abc_searchview_description_clear">清除查询</string>
    <string name="abc_searchview_description_query">搜索查询</string>
    <string name="abc_searchview_description_search">搜索</string>
    <string name="abc_searchview_description_submit">提交查询</string>
    <string name="abc_searchview_description_voice">语音搜索</string>
    <string name="abc_shareactionprovider_share_with">分享方式</string>
    <string name="abc_shareactionprovider_share_with_application">通过%s分享</string>
    <string name="abc_toolbar_collapse_description">收起</string>
    <string name="com_facebook_device_auth_instructions">请访问&lt;b&gt;facebook.com/device&lt;/b&gt;并输入以上验证码。</string>
    <string name="com_facebook_image_download_unknown_error">下载图片时出现意外错误。</string>
    <string name="com_facebook_internet_permission_error_message">WebView 登录需要访问网络</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest 错误</string>
    <string name="com_facebook_like_button_liked">赞了</string>
    <string name="com_facebook_like_button_not_liked">赞</string>
    <string name="com_facebook_loading">正在加载...</string>
    <string name="com_facebook_loginview_cancel_action">取消</string>
    <string name="com_facebook_loginview_log_in_button">登录</string>
    <string name="com_facebook_loginview_log_in_button_continue">前往 Facebook</string>
    <string name="com_facebook_loginview_log_in_button_long">使用 Facebook 登录</string>
    <string name="com_facebook_loginview_log_out_action">注销</string>
    <string name="com_facebook_loginview_log_out_button">注销</string>
    <string name="com_facebook_loginview_logged_in_as">登录身份：%1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">已通过 Facebook 登录</string>
    <string name="com_facebook_send_button_text">发送</string>
    <string name="com_facebook_share_button_text">分享</string>
    <string name="com_facebook_smart_device_instructions">要关联帐户，请在移动设备上打开 Facebook 应用并查看通知。</string>
    <string name="com_facebook_smart_device_instructions_or">- 或 -</string>
    <string name="com_facebook_smart_login_confirmation_cancel">不是你？</string>
    <string name="com_facebook_smart_login_confirmation_continue_as">以%1$s的身份继续</string>
    <string name="com_facebook_smart_login_confirmation_title">确认登录</string>
    <string name="com_facebook_tooltip_default">应用分享内容由你掌控。</string>
    <string name="search_menu_title">搜索</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="ClipImageActivity_cancle">取消</string>
    <string name="ClipImageActivity_select">选取</string>
    <string name="ClipImageActivity_title">选择头像</string>
    <string name="FindBackPwdActivity_Email_btn_login">下一步</string>
    <string name="FindBackPwdActivity_Email_et_pwd_text">输入邮箱帐号</string>
    <string name="FindBackPwdActivity_Email_toast_error">邮箱错误，请检查</string>
    <string name="FindBackPwdActivity_Email_tv_login">找回密码</string>
    <string name="FindBackPwdActivity_Phone_btn_confirm">获取验证码</string>
    <string name="FindBackPwdActivity_Phone_et_pwd_text">手机号码</string>
    <string name="FindBackPwdActivity_Phone_tv_login">找回密码</string>
    <string name="FindBackPwdActivity_Phone_tv_phone_email">手机号码</string>
    <string name="LoginActivity_Entrance_action_email">通过邮箱找回</string>
    <string name="LoginActivity_Entrance_btn_login_phone">手机号登录</string>
    <string name="LoginActivity_Entrance_btn_login_qq">QQ登录</string>
    <string name="LoginActivity_Entrance_btn_login_wechat">微信登录</string>
    <string name="LoginActivity_Entrance_btn_register_email">邮箱注册</string>
    <string name="LoginActivity_Entrance_btn_register_phone">手机注册</string>
    <string name="LoginActivity_Entrance_facebook">Facebook 登录</string>
    <string name="LoginActivity_Entrance_pwd">使用帐号密码登录</string>
    <string name="LoginActivity_Entrance_toast_fail">登录失败</string>
    <string name="LoginActivity_Entrance_tv_login">登录</string>
    <string name="LoginActivity_Entrance_tv_login_haveaccount">已有帐号？登录</string>
    <string name="LoginActivity_Entrance_tv_login_law">注册登录即同意潮汐用户协议</string>
    <string name="LoginActivity_Entrance_tv_login_other">更多方式登录</string>
    <string name="LoginActivity_Entrance_tv_login_sentence">从今天起，做一个好好生活的人。</string>
    <string name="LoginActivity_Entrance_weibo">微博登录</string>
    <string name="LoginActivity_Login_tab_1">验证码登录</string>
    <string name="LoginActivity_Login_tab_2">密码登录</string>
    <string name="LoginActivity_Login_tv_login">登录</string>
    <string name="LoginActivity_login_phone">手机验证</string>
    <string name="MainPageProfileActivity_Linked_account">第三方帐号</string>
    <string name="MainPageProfileActivity_account">帐号安全</string>
    <string name="MainPageProfileActivity_account_title">帐号</string>
    <string name="MainPageProfileActivity_bind">已绑定</string>
    <string name="MainPageProfileActivity_changepwd">修改密码</string>
    <string name="MainPageProfileActivity_email">邮箱</string>
    <string name="MainPageProfileActivity_fb">Facebook</string>
    <string name="MainPageProfileActivity_info">个人信息</string>
    <string name="MainPageProfileActivity_logout">登出</string>
    <string name="MainPageProfileActivity_nick">昵称</string>
    <string name="MainPageProfileActivity_phone">手机</string>
    <string name="MainPageProfileActivity_qq">QQ</string>
    <string name="MainPageProfileActivity_textView3">修改头像</string>
    <string name="MainPageProfileActivity_toast_fail">登录失败</string>
    <string name="MainPageProfileActivity_toast_head_fai">上传失败，请重试</string>
    <string name="MainPageProfileActivity_toast_head_scc">头像更新成功</string>
    <string name="MainPageProfileActivity_toast_logout_fail">登出失败</string>
    <string name="MainPageProfileActivity_unbind">未绑定</string>
    <string name="MainPageProfileActivity_wechat">微信</string>
    <string name="MainPageProfileActivity_weibo">微博</string>
    <string name="ProfileActivity_BindEmail_btn_confirm">下一步</string>
    <string name="ProfileActivity_BindEmail_et_pwd_text">你的邮箱地址</string>
    <string name="ProfileActivity_BindEmail_toast_error">邮箱错误，请检查</string>
    <string name="ProfileActivity_BindEmail_tv_login">绑定邮箱</string>
    <string name="ProfileActivity_BindPhone_btn_confirm">下一步</string>
    <string name="ProfileActivity_BindPhone_et_pwd_text">手机号码</string>
    <string name="ProfileActivity_BindPhone_toast_error">手机号错误或已绑定，请检查</string>
    <string name="ProfileActivity_BindPhone_tv_login">绑定新手机</string>
    <string name="ProfileActivity_ChangeEmail_btn_change">修改邮箱</string>
    <string name="ProfileActivity_ChangeEmail_btn_confirm">重发邮件</string>
    <string name="ProfileActivity_ChangeEmail_checked">已验证</string>
    <string name="ProfileActivity_ChangeEmail_sent_email">邮件已发送</string>
    <string name="ProfileActivity_ChangeEmail_sent_email_fail">邮件发送失败，请检查</string>
    <string name="ProfileActivity_ChangeEmail_title">我的邮箱</string>
    <string name="ProfileActivity_ChangeEmail_unchecked">未验证</string>
    <string name="ProfileActivity_ChangeName_change_name">修改用户名</string>
    <string name="ProfileActivity_ChangeName_confirm">确认</string>
    <string name="ProfileActivity_ChangeName_name">用户名</string>
    <string name="ProfileActivity_ChangeName_toast">昵称错误，请检查</string>
    <string name="ProfileActivity_ChangePhone_checked">已验证</string>
    <string name="ProfileActivity_ChangePhone_modi_phone">修改手机</string>
    <string name="ProfileActivity_ChangePhone_phone">我的手机号</string>
    <string name="ProfileActivity_ChangePwd_confirm">确认</string>
    <string name="ProfileActivity_ChangePwd_input_again">再次输入新密码</string>
    <string name="ProfileActivity_ChangePwd_input_new_pwd">输入新密码</string>
    <string name="ProfileActivity_ChangePwd_input_ori_pwd">输入原密码</string>
    <string name="ProfileActivity_ChangePwd_modify_fail">密码修改失败，请重试</string>
    <string name="ProfileActivity_ChangePwd_ori_pwd_err">原始密码错误</string>
    <string name="ProfileActivity_ChangePwd_pwd_format">密码格式错误</string>
    <string name="ProfileActivity_ChangePwd_pwd_not_equal">两次密码不一致</string>
    <string name="ProfileActivity_ChangePwd_title">修改密码</string>
    <string name="RegisterActivity_EmailConfirm_btn_confirm">确认邮箱</string>
    <string name="RegisterActivity_EmailConfirm_confirm">确认</string>
    <string name="RegisterActivity_EmailConfirm_content">我们将向该邮箱发送一封验证邮件，你可以稍后完成验证。</string>
    <string name="RegisterActivity_Email_confirm">登录</string>
    <string name="RegisterActivity_Email_email_address">你的邮箱地址</string>
    <string name="RegisterActivity_Email_email_format_error">邮箱格式错误，请检查</string>
    <string name="RegisterActivity_Email_email_regi">邮箱注册</string>
    <string name="RegisterActivity_Email_have_account_text">已有邮箱帐号？</string>
    <string name="RegisterActivity_Email_pwd_format_error">密码格式错误，请检查</string>
    <string name="RegisterActivity_Email_regi">注册</string>
    <string name="RegisterActivity_Email_set_pwd">设置密码</string>
    <string name="RegisterActivity_Email_time_out">登录超时，请重试</string>
    <string name="RegisterActivity_Email_toast_have_accont">已有邮箱，请直接登录</string>
    <string name="RegisterActivity_Phone_have_account">已有帐号，请直接登录</string>
    <string name="RegisterActivity_Phone_phone_format_error">手机号格式不符，请检查</string>
    <string name="RegisterActivity_Phone_phone_num">手机号码</string>
    <string name="RegisterActivity_Phone_phone_regi">手机注册</string>
    <string name="RegisterActivity_Phone_regi">确定</string>
    <string name="SettingsFragment_content">帐号可以同步你的专注记录</string>
    <string name="SettingsFragment_title">帐号</string>
    <string name="SettingsFragment_value">登录帐号</string>
    <string name="immersive_mode_content">退出应用将会导致专注失败，且专注过程中不允许暂停。</string>
    <string name="immersive_mode_title">沉浸模式</string>
    <string name="settings_section_subtitle_auto_focus">自动开始下一次专注与休息</string>
    <string name="settings_section_subtitle_break">休息模式开关、时长设置</string>
    <string name="settings_section_title_auto_focus">自动专注</string>
    <string name="settings_section_title_break">休息设置</string>
    <string name="settings_section_title_expert">高级</string>
    <string name="settings_section_title_focus_calculate">每日专注目标</string>
    <string name="settings_section_title_time_count">计时</string>
    <string name="settings_selection_title_focus_duration">专注时长</string>
    <string name="settings_selection_title_language">语言</string>
    <string name="settings_selection_title_volume">音量</string>
    <string name="settings_switch_subtitle_allownetwork">允许使用蜂窝移动网络更新背景图</string>
    <string name="settings_switch_subtitle_whitenoise">在计时过程中播放自然白噪音</string>
    <string name="settings_switch_subtitle_withmusic">开启后，播放音乐时会继续播放白噪音</string>
    <string name="settings_switch_title_allownetwork">使用移动网络</string>
    <string name="settings_switch_title_screenalwayson">屏幕常亮</string>
    <string name="settings_switch_title_whitenoise">白噪音</string>
    <string name="settings_switch_title_withmusic">与音乐融合</string>
    <string name="share_daily_qr_code">二维码水印</string>
    <string name="share_daily_save">保存日贴</string>
    <string name="share_daily_to">分享</string>
    <string name="tv_intro_today_focus_length">专注时长</string>
    <string name="tv_intro_today_focus_percent">专心程度</string>
    <string name="tv_intro_today_focus_times">专注次数</string>
    <string name="tv_this_week_focus">过去七天</string>
    <string name="tv_today_target">目标 60 分钟</string>
</resources>